# pain-radar-mcp

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  plan.md  status.md
docs/decisions/: 001-hn-algolia-api.md  002-fastmcp-framework.md  003-three-tool-design.md  index.md
src/pain_radar_mcp/: server.py
src/pain_radar_mcp/tools/: hn.py
src/pain_radar_mcp/utils/: cache.py  http.py  rate_limiter.py  scorer.py
tests/: test_hn.py
