[project]
name = "pain-radar-mcp"
version = "0.1.0"
description = "MCP server for discovering developer pain points from HN, SO, and G2"
authors = [
    { name = "shlee", email = "sanghun1210@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.3",
    "fastmcp>=3.1,<4",
    "httpx>=0.27",
]

[project.scripts]
pain-radar-mcp = "pain_radar_mcp.server:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
